# record-parser

./: README.md  pyproject.toml  requirements.txt
app/: main.py
